[package]
name = "rdom-virtualtable"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Virtualized table for rdom — a native <table> that materializes only the visible row window for large datasets."
repository = "https://github.com/miskun/rdom-virtualtable"
keywords = ["tui", "table", "virtual", "terminal", "rdom"]
categories = ["command-line-interface"]
readme = "README.md"
# Ship only the crate + its docs/examples; keep internal design docs
# (specs/, STATE.md, agent guides) out of the published tarball.
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
# Public rdom-tui surface only (native <table>, element/text builders,
# column sync). No path dep, no private hooks.
rdom-tui = "0.3.14"  # 0.3.14+: position_at no longer snaps out of a user-select:none region — an empty table-body click past the last column no longer starts a phantom text selection that hijacks the grid. 0.3.13: drag autoscroll + mid-tick cascade so re-windowed rows are sized before the synthetic move (DRAG-AUTOSCROLL)

[dev-dependencies]
# Synthesize crossterm MouseEvents for the mouse-interaction tests (must match
# rdom-tui's crossterm version so `TuiEvent::mousedown(MouseEvent)` accepts them).
crossterm = "0.28"
